--- a/posts/lk2810.md
+++ b/posts/lk2810.md
@@ -1,3 +1,3 @@
-#MSOR Details
+# MSOR Details
 
-While we study Probability and Statistics, Optimization, and Stochastic models, we do not study catgirls. `[sad-catgirl](https://imgur.com/gallery/L41aC8Q)`
+While we study Probability and Statistics, Optimization, and Stochastic models, we do not study catgirls. [sad-catgirl](https://imgur.com/gallery/L41aC8Q)
